--- a/example-app-deployment.yaml
+++ b/example-app-deployment.yaml
@@ -3,6 +3,10 @@ kind: Deployment
 metadata:
   name: example-app
   namespace: example-app
+  #annotations:
+  #  prometheus.io/scrape: 'true'
+  #  prometheus.io/path: '/metrics'
+  #  prometheus.io/port: '8080'
 spec:
   replicas: 2
   selector:
