--- a/example-app-svc.yaml
+++ b/example-app-svc.yaml
@@ -7,6 +7,7 @@ metadata:
     app: example-app
   annotations:
     prometheus.io/scrape: 'true'
+    prometheus.io/schema: 'http'
     prometheus.io/path: '/metrics'
     prometheus.io/port: '8080'
 spec:
